--- a/4lesson/index.html
+++ b/4lesson/index.html
@@ -7,7 +7,9 @@
     <script defer src="script.js"></script>
     <script defer src="einstein.js"></script>
     <script defer src="tasks.js"></script>
-    <title>Урок третий</title>
+    <script defer src="tasksHard_1.js"></script>
+    <script defer src="tasksHard_2.js"></script>
+    <title>Урок четвертый</title>
   </head>
   <body></body>
 </html>
