--- a/7lesson/index.html
+++ b/7lesson/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <!--  <script defer src="Task01.js"></script>
+    <script defer src="Task01.js"></script>
     <script defer src="Task02.js"></script>
-    <script defer src="Task03.js"></script> -->
+    <script defer src="Task03.js"></script>
     <script defer src="TaskHard.js"></script>
     <title>Урок седьмой</title>
   </head>
