--- a/8lesson/index.html
+++ b/8lesson/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script defer src="Task01.js"></script> -->
     <!-- <script defer src="Task02.js"></script> -->
-    <script defer src="Task03.js"></script>
-    <!-- <script defer src="TaskHard.js"></script> -->
+   <!--  <script defer src="Task03.js"></script> -->
+    <script defer src="Task04.js"></script>
     <title>Урок восьмой</title>
   </head>
   <body>
