--- a/8lesson/index.html
+++ b/8lesson/index.html
@@ -7,7 +7,8 @@
     <!-- <script defer src="Task01.js"></script> -->
     <!-- <script defer src="Task02.js"></script> -->
    <!--  <script defer src="Task03.js"></script> -->
-    <script defer src="Task04.js"></script>
+    <!-- <script defer src="Task04.js"></script> -->
+    <script defer src="game01.js"></script>
     <title>Урок восьмой</title>
   </head>
   <body>
