--- a/12lesson/index.html
+++ b/12lesson/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script defer src="Task01.js"></script> -->
+    <script defer src="recurse.js"></script>
     <!-- <script defer src="Task02.js"></script> -->
    <!--  <script defer src="Task03.js"></script> -->
     <!-- <script defer src="Task04.js"></script> -->
-    <script defer src="game01.js"></script>
+    <!-- <script defer src="game01.js"></script> -->
     <title>Урок двенадцатый</title>
   </head>
   <body>
